<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/game_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.fragment.SplashFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="14dp"
            android:id="@+id/top_layout"
            android:background="@drawable/gradient_clr"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/memory_card_game"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:fontFamily="@font/lemon_milk"

                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/bottom_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/bold_font"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_by_name"
                android:fontFamily="@font/bold_font"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar"
                android:fontFamily="@font/bold_font"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itay"
                android:fontFamily="@font/bold_font"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kobi"
                android:fontFamily="@font/bold_font"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>