<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.HomeFragment"

    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/game_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:cardCornerRadius="14dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lemon_milk_bold"
                android:text="@string/play_the_game"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lemon_milk"
                android:paddingBottom="15dp"
                android:text="@string/select_level"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/dk_red"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/easyTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:text="@string/easy"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/dk_blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/hardTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:text="@string/hard"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black_10"
                android:fontFamily="@font/lemon_milk"
                android:text="@string/check_top_scores_here"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/lt_orange"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/scoreboardTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:text="@string/scoreboard"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/dk_green"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/langTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/select_language"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black_10"
                android:fontFamily="@font/lemon_milk"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_call"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/call" />

                <ImageView
                    android:id="@+id/iv_message"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/meessage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"

                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_event"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:elevation="0dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:text="@string/add_event"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/add_alarm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center"
                    android:elevation="0dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:fontFamily="@font/lemon_milk"
                        android:gravity="center"
                        android:text="@string/add_alarm"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>