<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.fragment.ScoreBoardFragment">


    <TextView
        android:id="@+id/tvTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/lemon_milk_bold"
        android:text="@string/scoreboard"
        android:textAlignment="center"
        android:textColor="@color/dk_cyan"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/dk_red"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lemon_milk"
                    android:gravity="center"
                    android:text="@string/easy_level"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/escore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lemon_milk"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/dk_blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lemon_milk"
                    android:gravity="center"
                    android:text="@string/hard_level"
                    android:textColor="@color/white"
                    android:textSize="22sp" />


                <TextView
                    android:id="@+id/hscore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lemon_milk"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>